<resources>
    <string name="app_name" translatable="false">CineX</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="movie_title">Tên phim</string>
    <string name="movie_year">2025</string>
    <string name="movie_genre">Thể loại phim</string>
    <string name="movie_poster">Poster phim</string>
    <string name="rate_this_movie">Đánh giá phim này</string>
    <string name="default_rating">0/5</string>
    <string name="write_your_review">Viết bình luận của bạn</string>
    <string name="comment_hint">Chia sẻ cảm nhận của bạn về phim này...</string>
    <string name="character_count">0/500 ký tự</string>
    <string name="submit_review">Gửi đánh giá</string>
</resources>